--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: preseason
 Type: Package
 Title: Preseason forecast for Deshka River Chinook salmon
 Version: 0.1.0
+URL: https://github.com/adamreimer/preseason
 Author: Adam Reimer
 Maintainer: Adam Reimer <adam.reimer@alaska.gov>
 Description: Run several preseason forecast models and compare the results via cross validation.
