--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,12 @@ export(pred_es)
 export(pred_lm)
 export(pred_ma)
 export(prep_brood)
+importFrom(graphics,hist)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
 importFrom(magrittr,"%>%")
+importFrom(stats,complete.cases)
+importFrom(stats,dlnorm)
+importFrom(stats,dnorm)
+importFrom(stats,predict)
+importFrom(stats,update)
